--- a/.github/workflows/ventus-build.yml
+++ b/.github/workflows/ventus-build.yml
@@ -47,35 +47,10 @@ jobs:
         export DRIVER_BUILD_DIR=${DRIVER_DIR}/build
         export VENTUS_INSTALL_PREFIX=${{github.workspace}}/install
 
-    - name: Start building llvm-ventus
+    - name: Start building
       shell: bash
       run: |
-        ./build-ventus.sh --build llvm-ventus
-
-    - name: Start building ocl-icd
-      shell: bash
-      run: |
-        ./build-ventus.sh --build ocl-icd
-
-    - name: Start building libclc
-      shell: bash
-      run: |
-        ./build-ventus.sh --build libclc
-
-    - name: Start building spike
-      shell: bash
-      run: |
-        ./build-ventus.sh --build spike
-
-    - name: Start building driver
-      shell: bash
-      run: |
-        ./build-ventus.sh --build driver
-
-    - name: Start building pocl
-      shell: bash
-      run: |
-        ./build-ventus.sh --build pocl
+        ./build-ventus.sh
 
     - name: Start ISA simulation test
       run: |
